Tweaking form function

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,72 @@
 
 *.docx
+cherylvelez.com_PROD_Oct_6_19/js/cherylvelez.js
+cherylvelez.com_PROD_Oct_6_19/index.html
+cherylvelez.com_PROD_Oct_6_19/dev/js/jquery.min.js
+cherylvelez.com_PROD_Oct_6_19/dev/js/jquery-ui.min.js
+cherylvelez.com_PROD_Oct_6_19/dev/js/cherylvelez.js
+cherylvelez.com_PROD_Oct_6_19/dev/js/bootstrap.js
+cherylvelez.com_PROD_Oct_6_19/dev/index.html
+cherylvelez.com_PROD_Oct_6_19/dev/images/usaidenergy.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/unitedwaync.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/saki.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/prep.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/OTR.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/neonatal.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/indiancancersociety.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/hrret.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/gcyerti.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/favicon.ico
+cherylvelez.com_PROD_Oct_6_19/dev/images/earlycheck.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/DPT.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/cheryl.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/buildingblocks.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/banner.png
+cherylvelez.com_PROD_Oct_6_19/dev/images/banner.jpg
+cherylvelez.com_PROD_Oct_6_19/dev/css/custom.css
+cherylvelez.com_PROD_Oct_6_19/dev/css/custom - Copy.css
+cherylvelez.com_PROD_Oct_6_19/dev/css/cherylvelez.css
+cherylvelez.com_PROD_Oct_6_19/dev/css/cherylvelez-webkit.css
+cherylvelez.com_PROD_Oct_6_19/dev/css/bootstrap.css
+cherylvelez.com_PROD_Oct_6_19/dev/css/bootstrap-theme.css
+cherylvelez.com_PROD_Oct_6_19/dev/css/animation.css
+cherylvelez.com_PROD_Oct_6_19/dev/cherylvelez_DEV_Jan20_Backup/images/banner.jpg
+cherylvelez.com_PROD_Oct_6_19/css/cherylvelez.css
+cherylvelez.com_PROD_Feb13_Backup/menu-ss.png
+cherylvelez.com_PROD_Feb13_Backup/js/sunflower.js
+cherylvelez.com_PROD_Feb13_Backup/js/jquery.min.js
+cherylvelez.com_PROD_Feb13_Backup/js/jquery-ui.min.js
+cherylvelez.com_PROD_Feb13_Backup/index.php
+cherylvelez.com_PROD_Feb13_Backup/index.html
+cherylvelez.com_PROD_Feb13_Backup/images/saki.png
+cherylvelez.com_PROD_Feb13_Backup/images/prep.png
+cherylvelez.com_PROD_Feb13_Backup/images/neonatal.png
+cherylvelez.com_PROD_Feb13_Backup/images/layouts.png
+cherylvelez.com_PROD_Feb13_Backup/images/indiancancersociety.png
+cherylvelez.com_PROD_Feb13_Backup/images/hrret.png
+cherylvelez.com_PROD_Feb13_Backup/images/header.jpg
+cherylvelez.com_PROD_Feb13_Backup/images/gcyerti.png
+cherylvelez.com_PROD_Feb13_Backup/images/earlycheck.png
+cherylvelez.com_PROD_Feb13_Backup/images/cheryl.png
+cherylvelez.com_PROD_Feb13_Backup/images/buildingblocks.png
+cherylvelez.com_PROD_Feb13_Backup/images/.DS_Store
+cherylvelez.com_PROD_Feb13_Backup/css/sunflower.css
+cherylvelez.com_PROD_Feb13_Backup/css/styles.css
+cherylvelez.com_PROD_Feb13_Backup/css/skeleton.css
+cherylvelez.com_PROD_Feb13_Backup/css/normalize.css
+cherylvelez.com_PROD_Feb13_Backup/callout.gif
+play/tile1.png
+play/tile2.png
+play/tile3.png
+play/tile4.png
+play/tile5.png
+play/tile6.png
+play/tile7.png
+play/tile8.png
+waterpuddle/
+mod/assets/beyond_labels.mp4
+mod/assets/accordion-widget.mulib
+mod/assets/audio-trigger_1.0.0.zxp
+mod/assets/beatricestory.mp3
+mod/assets/bell_story.mp3
+mod/beatrice.html
