--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ mod/assets/audio-trigger_1.0.0.zxp
 mod/assets/beatricestory.mp3
 mod/assets/bell_story.mp3
 mod/beatrice.html
+mod/assets/beyond-labels.mp4
