--- a/.gitignore
+++ b/.gitignore
@@ -531,3 +531,113 @@ mod/scripts/webpro.js
 mod/scripts/whatinput.js
 mod/sheila.html
 mod/sitemap.xml
+upload_to_S3/cheryl-velez-resume.pdf
+upload_to_S3/css/animate.css
+upload_to_S3/css/bootstrap.min.css
+upload_to_S3/css/styles.css
+upload_to_S3/images/banner.png
+upload_to_S3/images/blog-bg.jpg
+upload_to_S3/images/callout.gif
+upload_to_S3/images/cheryl.png
+upload_to_S3/images/codepen.svg
+upload_to_S3/images/codepen/firehouse-back.jpg
+upload_to_S3/images/codepen/fireman.jpg
+upload_to_S3/images/contact-img.jpg
+upload_to_S3/images/DPT.png
+upload_to_S3/images/education-img.jpg
+upload_to_S3/images/envelope.svg
+upload_to_S3/images/experience-img.jpg
+upload_to_S3/images/favicon.ico
+upload_to_S3/images/github.svg
+upload_to_S3/images/home-img.jpg
+upload_to_S3/images/img-noise-361x370.png
+upload_to_S3/images/linkedin.svg
+upload_to_S3/images/projects-bg.jpg
+upload_to_S3/images/quotes-bg.jpg
+upload_to_S3/images/twitter.svg
+upload_to_S3/images/whatido-img.jpg
+upload_to_S3/images/wordpress.svg
+upload_to_S3/index.html
+upload_to_S3/js/act_mail.php
+upload_to_S3/js/bootstrap.min.js
+upload_to_S3/js/custom.js
+upload_to_S3/js/jquery.js
+upload_to_S3/js/jquery.parallax.js
+upload_to_S3/js/smoothscroll.js
+upload_to_S3/js/wow.min.js
+upload_to_S3/play/1/.htaccess
+upload_to_S3/play/1/asset-manifest.json
+upload_to_S3/play/1/favicon.ico
+upload_to_S3/play/1/index.html
+upload_to_S3/play/1/logo192.png
+upload_to_S3/play/1/logo512.png
+upload_to_S3/play/1/manifest.json
+upload_to_S3/play/1/precache-manifest.5875ab393873895d0cf4b00e1668fb0b.js
+upload_to_S3/play/1/precache-manifest.b8b3944b79aaa01ec733a15503aa6865.js
+upload_to_S3/play/1/precache-manifest.db758076e6f8a989b0e23231528b3788.js
+upload_to_S3/play/1/robots.txt
+upload_to_S3/play/1/service-worker.js
+upload_to_S3/play/1/static/css/main.99e44358.chunk.css
+upload_to_S3/play/1/static/css/main.99e44358.chunk.css.map
+upload_to_S3/play/1/static/css/main.a718124f.chunk.css
+upload_to_S3/play/1/static/css/main.a718124f.chunk.css.map
+upload_to_S3/play/1/static/js/2.fbd7b8cf.chunk.js
+upload_to_S3/play/1/static/js/2.fbd7b8cf.chunk.js.LICENSE.txt
+upload_to_S3/play/1/static/js/2.fbd7b8cf.chunk.js.map
+upload_to_S3/play/1/static/js/main.9c3ff36f.chunk.js
+upload_to_S3/play/1/static/js/main.9c3ff36f.chunk.js.map
+upload_to_S3/play/1/static/js/main.d230fd00.chunk.js
+upload_to_S3/play/1/static/js/main.d230fd00.chunk.js.map
+upload_to_S3/play/1/static/js/runtime-main.29092938.js
+upload_to_S3/play/1/static/js/runtime-main.29092938.js.map
+upload_to_S3/play/2/asset-manifest.json
+upload_to_S3/play/2/favicon.ico
+upload_to_S3/play/2/index.html
+upload_to_S3/play/2/loco512.png
+upload_to_S3/play/2/logo192.png
+upload_to_S3/play/2/manifest.json
+upload_to_S3/play/2/precache-manifest.1b617a30b41cbf1ad59b9f312d94667e.js
+upload_to_S3/play/2/precache-manifest.8de55500e6000853e555c3f3d2bd580e.js
+upload_to_S3/play/2/robots.txt
+upload_to_S3/play/2/service-worker.js
+upload_to_S3/play/2/static/css/main.a2c428e4.chunk.css
+upload_to_S3/play/2/static/css/main.a2c428e4.chunk.css.map
+upload_to_S3/play/2/static/js/2.3a6a0cb6.chunk.js
+upload_to_S3/play/2/static/js/2.3a6a0cb6.chunk.js.LICENSE.txt
+upload_to_S3/play/2/static/js/2.3a6a0cb6.chunk.js.map
+upload_to_S3/play/2/static/js/main.367008e1.chunk.js
+upload_to_S3/play/2/static/js/main.367008e1.chunk.js.map
+upload_to_S3/play/2/static/js/main.b6031248.chunk.js
+upload_to_S3/play/2/static/js/main.b6031248.chunk.js.map
+upload_to_S3/play/2/static/js/runtime-main.0d2ed474.js
+upload_to_S3/play/2/static/js/runtime-main.0d2ed474.js.map
+upload_to_S3/play/2/static/js/runtime-main.e48294ba.js
+upload_to_S3/play/2/static/js/runtime-main.e48294ba.js.map
+upload_to_S3/play/3/asset-manifest.json
+upload_to_S3/play/3/favicon.ico
+upload_to_S3/play/3/index.html
+upload_to_S3/play/3/logo192.png
+upload_to_S3/play/3/logo512.png
+upload_to_S3/play/3/manifest.json
+upload_to_S3/play/3/precache-manifest.ea35fe1cbafc6f61c3e1454a8a57face.js
+upload_to_S3/play/3/robots.txt
+upload_to_S3/play/3/service-worker.js
+upload_to_S3/play/3/site.webmanifest
+upload_to_S3/play/3/static/css/main.e5c09a4b.chunk.css
+upload_to_S3/play/3/static/css/main.e5c09a4b.chunk.css.map
+upload_to_S3/play/3/static/js/2.9b38740b.chunk.js
+upload_to_S3/play/3/static/js/2.9b38740b.chunk.js.LICENSE.txt
+upload_to_S3/play/3/static/js/2.9b38740b.chunk.js.map
+upload_to_S3/play/3/static/js/main.adb448d2.chunk.js
+upload_to_S3/play/3/static/js/main.adb448d2.chunk.js.map
+upload_to_S3/play/3/static/js/runtime-main.bcfe75c4.js
+upload_to_S3/play/3/static/js/runtime-main.bcfe75c4.js.map
+upload_to_S3/play/drum-back.jpg
+upload_to_S3/play/tile1.png
+upload_to_S3/play/tile2.png
+upload_to_S3/play/tile3.png
+upload_to_S3/play/tile4.png
+upload_to_S3/play/tile5.png
+upload_to_S3/play/tile6.png
+upload_to_S3/play/tile7.png
+upload_to_S3/play/tile8.png
