Added portfolio item

--- a/.gitignore
+++ b/.gitignore
@@ -641,7 +641,6 @@ upload_to_S3/play/tile5.png
 upload_to_S3/play/tile6.png
 upload_to_S3/play/tile7.png
 upload_to_S3/play/tile8.png
-images/portfolio/source.psd
 OLD/cheryl-velez-resume.pdf
 OLD/css/animate.css
 OLD/css/bones/font-awesome.min.css
@@ -2418,3 +2417,4 @@ OLD/screen1.png
 OLD/screen2.png
 OLD/screen3.png
 OLD/screen4.png
+css/screen_copy.css
